--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,5 @@ hs_err_pid*
 replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,eclipse
+최재원/.classpath
+최재원/.project
